maze.lessons.maze.island.IslandMaze.scala.error
Escaper:32: error: ';' expected but 'else' found.
        }else{
         ^Escaper:40: error: ';' expected but 'else' found.
    }else{
     ^Escaper:51: error: Unmatched closing brace '}' ignored here
}
^